Fix spacing of last searches

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -162,6 +162,8 @@ body {
 }
 
 .last-search {
+	display: inline-block;
+	
 	ol {
 		margin-left: .25em;
 		padding-left: 0;
